# actix-web-test

./: Cargo.toml  docker-compose.yml  setup.sh  teigi
docker/: Dockerfile
docker/nginx/: Dockerfile  default.conf  nginx.conf
migrations/2020-12-03-081428_users/: up.sql
src/: db_client.rs  lib.rs  main.rs  routes.rs  schema.rs
src/controllers/: login.rs
src/models/: user.rs
