[package]
name = "actix-web-test"
version = "0.1.0"
authors = ["steshima <steshima@sonix.asia>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.0"
actix-rt = "1.1.1"
diesel = { version = "1.4.5", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
